fix: text-overflow with flex

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,9 +326,9 @@ body {
   flex-shrink: 1;
   gap: 5px;
   padding: 12px 24px 12px 10px;
+  min-width: 0;
 }
 .card-food__container__title {
-  transition: width 1s ease-out;
   font-family: Roboto;
   font-weight: 500;
   font-size: 18px;
@@ -349,7 +349,6 @@ body {
   color: #353535;
 }
 .card-food__container__content__describe {
-  transition: width 1s ease-out;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -388,12 +387,6 @@ body {
   font-size: 16px;
   margin: auto;
   color: #99E2D0;
-}
-.card-food:hover .card-food__container__title {
-  width: 14em;
-}
-.card-food:hover .card-food__container__content__describe {
-  width: 2em;
 }
 .card-food:hover .card-food__check {
   width: 55px;
